[package]
name = "middleware-server"
version = "0.1.0"
edition = "2021"

[dependencies]
spacetimedb-sdk = "1.0"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
dotenvy = "0.15" # For .env file
log = "0.4"
env_logger = "0.10"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }